--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mux/mux-data-react-native-video": "^0.18.3",
     "@mux/mux-player-react": "^3.4.0",
     "@radix-ui/react-dialog": "^1.1.14",
